Styling now correct for selected category. + form now smaller on mobile

--- a/src/components/FAQ/styles.scss
+++ b/src/components/FAQ/styles.scss
@@ -7,27 +7,29 @@
   }
   margin: 50px auto;
   border-radius: 5px;
+  transition: all 3s;
   .category-holder {
     width: 100%;
+    margin: 3rem 0;
     min-height: 100px;
     max-height: 500px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     text-align: center;
-    justify-content: space-between; 
-    .category-item:nth-child(1):hover, .category-item:nth-child(1):active{
+    justify-content: space-between;
+    .category-item:nth-child(1):hover {
       background: $primary !important;
     }
-    .category-item:nth-child(2):hover{
+    .category-item:nth-child(2):hover {
       background: $pink !important;
-    }  
-    .category-item:nth-child(3):hover{
+    }
+    .category-item:nth-child(3):hover {
       background: $orange !important;
-    }  
-    .category-item:nth-child(4):hover{
+    }
+    .category-item:nth-child(4):hover {
       background: $success !important;
-    }  
+    }
     .category-item {
       cursor: pointer;
       color: $dark;
@@ -38,11 +40,10 @@
       padding: 15px;
       border: 1px solid rgba(0, 0, 0, 0.3);
       border-radius: 5px;
-      transition: all .3s;
+      transition: all 0.3s;
       &:hover {
         color: $light;
       }
-      
       svg {
         width: 32px;
       }
@@ -65,11 +66,10 @@
         max-width: 24%;
         padding: 30px;
         .category-name {
-          font-size: 1rem;
+          font-size: 0.7rem;
         }
       }
       @include media-breakpoint-up(lg) {
-        max-width: 20%;
         svg {
           width: 72px;
           height: 72px;
@@ -77,6 +77,9 @@
         .category-name {
           font-size: 1.5rem;
         }
+      }
+      @include media-breakpoint-up(xl) {
+        max-width: 20%;
       }
     }
   }
